<resources>
    <string name="app_name">SciProSpr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="instruction_please_choose_variables">Choose the types of variables you want to use for your data collection by clicking the buttons below.</string>
    <string name="how_many_digits">How many digits?</string>
    <string name="how_many_decimal_digits">How many digits and decimal digits?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_comment">Add a comment</string>
    <string name="name_column">Name column</string>
    <string name="google_maps_key" templateMergeStrategy="preserve"> AIzaSyAF5X1tbJuHX_wUDikxeJbUhAmX_9olLWk </string>
    <string name="title_activity_save_file">SaveFileActivity</string>
    <string name="unnamed_column">Unnamed column</string>
    <string name="integer_string">INTEGER</string>
    <string name="long_string">LONG</string>
    <string name="text_string">TEXT</string>
    <string name="coordinates_string">COORDINATES</string>
    <string name="timestamp_string">TIMESTAMP</string>
    <string name="enum_string">ENUM</string>
    <string name="picture_string">PICTURE</string>
    <string name="no_digits">no. of digits</string>
    <string name="no_decimals">no. of decimals</string>
    <string name="how_many_tags">How many unique tags ("Enums")?</string>
    <string name="Set_tag_name">Set tag name #</string>
    <string name="unnamed_tag">unnamed_tag</string>
    <string name="csv">.csv</string>
    <string name="filename">Filename</string>
    <string name="filename2">Filename</string>
    <string name="new_table">New table</string>
    <string name="welcome_to_sciprospr_ready_to_collect_data_please_create_a_new_sheet">Welcome to SciProSpr! Ready to collect data? Go ahead and create a new sheet!</string>
    <string name="visit_webpage">Visit webpage</string>
    <string name="banner_ad_unit_id">ca-app-pub-7069656049221804~4825901577</string>
    <string name="banner_ad_unit_id2">ca-app-pub-7069656049221804~4825901577</string>
    <string name="banner_ad_unit_id3">ca-app-pub-7069656049221804~4825901577</string>
    <string name="ask_for_input_value">Please input value</string>
    <string name="empty_string" />
    <string-array name="file_types">
        <item>.csv</item>
        <item>.txt</item>
    </string-array>
</resources>
