<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moritz.SciProSpr.sciprospr.SciProSprMain"
    android:backgroundTint="#ffffff"
    tools:showIn="@layout/activity_sci_pro_spr_main"
    android:transitionGroup="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome_to_sciprospr_ready_to_collect_data_please_create_a_new_sheet"
            android:id="@+id/textView"/>

        <ImageView
            android:id="@+id/bilden"
            android:layout_width="241dp"
            android:layout_height="319dp"
            android:src="@drawable/bild"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="287dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="0.50"
            android:weightSum="1">

            <Button
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:text="@string/new_table"
                android:id="@+id/NewTable"
                android:backgroundTint="#1c6d09"
                android:background="#1c6d09"
                android:layout_gravity="start"
                android:textColor="#ffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_webpage"
                android:id="@+id/visitWebPageButton"
                android:layout_gravity="end"
                android:background="#0536fa"
                android:textColor="#ffffff"
                android:backgroundTint="#0536fa" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
